apply plugin: 'java'
apply plugin: 'maven-publish'

sourceSets.main.java.srcDirs = ["src/main/java"]
sourceSets.test.java.srcDirs = ["src/test/java"]

repositories{
  mavenCentral()
  mavenLocal()
  maven{ url 'https://www.jitpack.io' }
}

publishing {
  publications {
    maven(MavenPublication) {
      groupId = 'com.github.EB-wilson.UniverseCore'
      artifactId = 'annotations'
      version = "$uncVersion"
      from components.java
    }
  }
}

tasks.withType(JavaCompile){
  options.encoding = "UTF-8"

  sourceCompatibility = 8
  targetCompatibility = 8

  options.fork = true
  options.forkOptions.jvmArgs.addAll([
          "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
          "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
          "--add-opens", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
          "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
          "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
          "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
  ])
}

tasks.withType(Jar){
  archiveFileName = "${project.name}.jar"
}

dependencies{
  //compileOnly files("libs/tools.jar")
  compileOnly 'com.google.auto.service:auto-service:1.0.1'

  annotationProcessor 'com.google.auto.service:auto-service:1.0.1'
}
sourceCompatibility = JavaVersion.VERSION_1_9
targetCompatibility = JavaVersion.VERSION_1_9
